<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
         android:id="@+id/search_bar"
         android:title="@string/search"
         android:icon="@drawable/ic_search"
         app:showAsAction="always"
         app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/add_to_cart"
        android:title="@string/add_to_cart"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        app:actionLayout="@layout/custom_menu_layout"/>

    <item
        android:id="@+id/view_selector"
        android:title="@string/view_select"
        android:icon="@drawable/ic_view_selector_grid"
        app:showAsAction="always"/>

    <item
        android:id="@+id/settings_button"
        android:title="@string/settings"
        app:showAsAction="never"
        android:orderInCategory="1"
        app:actionViewClass="android.widget.SearchView"/>


    <item
        android:id="@+id/logout_button"
        android:title="@string/logout"
        app:showAsAction="never"
        android:orderInCategory="2"
        app:actionViewClass="android.widget.SearchView"/>
</menu>