<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/itemImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/itemTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemImage"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemTitle"
            android:isIndicator="true"
            android:numStars="5"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:layout_below="@id/ratingBar"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />

        <TextView
            android:id="@+id/price"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:layout_marginBottom="6dp"
            android:padding="8dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/light_grey"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/add_to_cart"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_centerInParent="true"
            android:layout_below="@id/price"
            android:backgroundTint="@color/aqua"
            android:text="@string/to_cart" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/add_to_cart"
            android:backgroundTint="@color/darkred"
            android:text="@string/delete" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>